--- a/land.html
+++ b/land.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="home.html">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,5 +46,7 @@
     	DINOs
     </div>
 </center>
+
+land  blah blah 
 </body>
     </html>
